# alarmservice-rs

./: Cargo.toml  README.md
config/: default.yml
docker/dev/: .env
src/alarmservice-rs/: Cargo.toml
src/alarmservice-rs/src/: README.md  config.rs  main.rs  metrics.rs  tracing.rs
src/alarmservice-rs/src/api/: errors.rs  mod.rs  router.rs
src/alarmservice-rs/src/api/handlers/: alarms_handler.rs  event_handler.rs  hello_handler.rs  mod.rs  rooms_handler.rs  schedule_handler.rs
src/alarmservice-rs/src/api/mappers/: dto_mappers.rs  mod.rs
src/alarmservice-rs/src/persistence/: database.rs  mod.rs
src/alarmservice-rs/src/persistence/entities/: alarm.rs  mod.rs  room.rs  schedule.rs
src/alarmservice-rs/src/persistence/migration/: mod.rs  v1_001_create_tables.rs  v1_002_add_data.rs
src/alarmservice-rs/src/persistence/repositories/: alarm_repo.rs  mod.rs
src/models-rs/: Cargo.toml  build.rs
src/models-rs/src/: lib.rs
src/models-rs/src/models/: alarm_dto.rs  event_dto.rs  mod.rs  room_dto.rs  schedule_dto.rs
src/openapi/: api.yml
src/openapi/templates/rust-and-tsify/: model.mustache  model_mod.mustache
src/openapi/templates/typescript-node/: model.mustache
src/ts/models/: alarmDto.ts  eventDto.ts  roomDto.ts  scheduleDto.ts
