[package]
name = "alarmservice-rs"
version = "0.1.0"
edition = "2021"

[dependencies]

# add clap for parsing cmd line arguments
clap = { version = "4.5.17", features = ["derive"] }

# parse config files
config = { version = "0.14", features = ["yaml"] }

# enable (de)serialization for annotated structs
serde = { version = "1.0.197", features = ["derive"] }

# add 'tracing' crate as logging framework
tracing = { version= "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# add 'seaorm' crate for ORM
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
] }
# add seaorm's migration crate
sea-orm-migration = "1.0.1"

# add 'tokyo' crate for async support
tokio = { version = "1.40.0", features = ["full", "tracing"] }

